error_4

libgomp: Invalid value for environment variable OMP_NUM_THREADS

libgomp: Invalid value for environment variable OMP_NUM_THREADS
Using TensorFlow backend.
Traceback (most recent call last):
  File "/lustre/home/d167/s1137563/Paolo_repository/unet/main.py", line 2, in <module>
    from data_helper import dataGenerator,load_data_Kfold, get_items, test_file_reader, saveResult, plot_imgs, plot_segm_history
  File "/lustre/home/d167/s1137563/Paolo_repository/unet/data_helper.py", line 94
    io.imsave(os.path.join(save_path,f"{i}_predict.png"),img)
                                                      ^
SyntaxError: invalid syntax
